NO-JIRA Remove new code issues resulting from the update of the deprecated methods.